--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
         hibernate:
           dialect: org.hibernate.dialect.MySQL8Dialect
 
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+
 
 rabbitmq:
   queue:
