OpenApi successfully added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ springdoc:
     path: /api-docs
   swagger-ui:
     path: /swagger-ui.html
+  openapi:
+    dev-url: http://localhost:8080
+    prod-url: https://bezkoder-api.com
 
 
 rabbitmq:
